fixed header spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ header {
   left: 0;
   top: 0;
   width: 100%;
+  padding: 4em 0 6em 0;
 }
 
 main {
