--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -22,6 +22,7 @@ header {
   left: 0;
   top: 0;
   width: 100%;
+  padding: 4em 0 6em 0;
 }
   
 main {
